--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@expo/vector-icons": "^10.0.6",
     "expo": "~36.0.0",
     "expo-font": "^8.0.0",
+    "firebase": "^7.6.1",
     "moment": "^2.24.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
@@ -25,7 +26,8 @@
     "react-navigation-tabs": "^2.6.2",
     "react-redux": "^7.1.3",
     "react-test-renderer": "^16.12.0",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
